--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,8 @@
 
 @utility container{
   margin-inline:auto;
-  padding-left: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
 
   @media (width >= 640px) {
     max-width: 640px;
@@ -140,12 +141,16 @@
 }
 
 @utility cosmic-button{
-  @apply px-6 py-2 rounded-full bg-primary text-primary-foreground front-medium transition-all duration-300 hover:shadow-[0_0_10px_rgba(139,92,246,0.5)] hover:scale-105 active:scale-95;
+  @apply px-6 py-2 rounded-full bg-primary text-primary-foreground transition-all duration-300 hover:shadow-[0_0_10px_rgba(139,92,246,0.5)] hover:scale-105 active:scale-95;
 }
 
 @utility star{
-  @apply absolute bg-linear-to-r from-write to-transparent rounded-full;
-  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3)
+  @apply absolute bg-linear-to-r from-white to-transparent rounded-full;
+  box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.3);
+}
+@utility meteor{
+  @apply relative bg-linear-to-r from-white to-transparent rounded-full;
+  box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.3);
 }
 
 #root {
